--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.22"
+    "axios": "^0.18.0",
+    "fusioncharts": "^3.13.3-sr.1",
+    "moment-timezone": "^0.5.23",
+    "vue": "^2.5.22",
+    "vue-fusioncharts": "^3.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.4.0",
